--- a/以太坊合约部署.md
+++ b/以太坊合约部署.md
@@ -34,7 +34,7 @@ remix：在线工具，可以编写、编译、调试、发布合约，还有模
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/202004161801481.jpg?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MjcwNDM1Ng==,size_16,color_FFFFFF,t_70#pic_center)
 **然后会提示可能会超过燃料上限，不要管它，点send**
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200416183649671.jpg?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MjcwNDM1Ng==,size_16,color_FFFFFF,t_70#pic_center)
-然后会弹出这个窗问你是否确认，同时要配置一下gas price，默认10，我设置为2，部署了三个小时了  还没完，看自己情况。
+然后会弹出这个窗问你是否确认，同时要配置一下gas price，默认10，至少设置6gwei，不然慢死，开始我设置2gwei等了三个小时都没有排上队，无奈改成6，这里看自己情况
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200416184900103.jpg#pic_center)
 然后点击确定 部署完成，接下来就是等待。。。
 remix控制台会有交易hash点击直接过去查看处理情况
