--- a/以太坊合约部署.md
+++ b/以太坊合约部署.md
@@ -34,7 +34,19 @@ remix：在线工具，可以编写、编译、调试、发布合约，还有模
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/202004161801481.jpg?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MjcwNDM1Ng==,size_16,color_FFFFFF,t_70#pic_center)
 **然后会提示可能会超过燃料上限，不要管它，点send**
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200416183649671.jpg?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MjcwNDM1Ng==,size_16,color_FFFFFF,t_70#pic_center)
-然后会弹出这个窗问你是否确认，同时要配置一下gas price，默认10，至少设置6gwei，不然慢死，开始我设置2gwei等了三个小时都没有排上队，无奈改成6，这里看自己情况
+**然后会弹出这个窗问你是否确认，同时要配置一下gas price，默认10，至少设置6gwei，不然慢死，开始我设置2gwei等了三个小时都没有排上队，无奈改成6，几分钟就好了，这里看自己情况。**
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200416184900103.jpg#pic_center)
-然后点击确定 部署完成，接下来就是等待。。。
-remix控制台会有交易hash点击直接过去查看处理情况
+**然后点击确定 ，接下来就是等待。。。
+remix控制台会有交易hash点击直接过去查看处理情况**
+
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20200416195101519.jpg?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MjcwNDM1Ng==,size_16,color_FFFFFF,t_70#pic_center)
+**部署成功还剩最后一步 验证发布
+复制你的账户地址 打开**[区块链浏览器](https://etherscan.io/)**搜索你账户的交易记录，点进去**
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20200416195418306.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MjcwNDM1Ng==,size_16,color_FFFFFF,t_70)
+**复制合约地址，搜索合约地址，点击contract**
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20200416195629949.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MjcwNDM1Ng==,size_16,color_FFFFFF,t_70)
+**（您是合同创建者吗？立即验证并发布您的合同源代码！），点击蓝色部分验证发布**
+![在这里插入图片描述](https://img-blog.csdnimg.cn/202004162004348.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MjcwNDM1Ng==,size_16,color_FFFFFF,t_70)
+**选择编译类型 根据自己情况 我们这里singlle(就一个合约文件)
+选择版本，与自己合约使用版本一致 这里0.4.17
+最后一个是选择合约的版权，可以自己点开蓝色小符号看一下区别，推荐看**[这里](https://blog.csdn.net/weixin_41010198/article/details/87879083)，**这里选mini，continue，把合约源代码拷过来，验证，发布，完成了！！**
