--- a/以太坊合约部署.md
+++ b/以太坊合约部署.md
@@ -43,7 +43,7 @@ remix控制台会有交易hash点击直接过去查看处理情况**
 **部署成功还剩最后一步 验证发布
 复制你的账户地址 打开**[区块链浏览器](https://etherscan.io/)**搜索你账户的交易记录，点进去**
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200416195418306.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MjcwNDM1Ng==,size_16,color_FFFFFF,t_70)
-**复制合约地址，搜索合约地址，点击contract**
+**点击合约地址，点击contract**
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/20200416195629949.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MjcwNDM1Ng==,size_16,color_FFFFFF,t_70)
 **（您是合同创建者吗？立即验证并发布您的合同源代码！），点击蓝色部分验证发布**
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/202004162004348.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MjcwNDM1Ng==,size_16,color_FFFFFF,t_70)
